--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -11,7 +11,7 @@ server {
     if ( !-f $request_filename ){
         rewrite (.*) /index.js;
     }
-    location = /index.js {
+    location ~ /api/ {
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
