--- a/admin/.roadhogrc
+++ b/admin/.roadhogrc
@@ -15,7 +15,8 @@
     },
     "production": {
       "extraBabelPlugins": [
-        "transform-runtime"
+        "transform-runtime",
+        ["import", { "libraryName": "antd", "style": "css" }]
       ]
     }
   }
